[package]
name = "bitcoin-networks"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Bitcoin network types and parameters"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "network"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = []
std = ["internals/std"]
serde = ["dep:serde"]

[dependencies]
internals = { package = "bitcoin-internals", path = "../internals", version = "0.4.2", default-features = false }

serde = { version = "1.0.195", default-features = false, features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
redundant_clone = "warn"
use_self = "warn"
